// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser Should work with arguments 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 76,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 76,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 76,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 36,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 36,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "leadingIndent": 4,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 49,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 19,
            },
            "pos": 15,
          },
          Object {
            "__debugKind": "MethodSlot",
            "body": Object {
              "__debugKind": "SequenceOfStatements",
              "end": 76,
              "kind": 52,
              "pos": 57,
              "statements": Array [
                Object {
                  "__debugKind": "LocalExpressionStatement",
                  "end": 76,
                  "expression": Object {
                    "__debugKind": "BinaryShorthand",
                    "end": 76,
                    "kind": 57,
                    "left": Object {
                      "__debugKind": "SlotLookupExpression",
                      "end": 65,
                      "expression": Object {
                        "__debugKind": "ThisExpression",
                        "end": 62,
                        "kind": 48,
                        "pos": 57,
                      },
                      "kind": 42,
                      "name": Object {
                        "__debugKind": "Identifier",
                        "end": 63,
                        "fullPos": 62,
                        "id": "x",
                        "kind": 21,
                        "leadingIndent": 8,
                        "pos": 62,
                      },
                      "pos": 57,
                    },
                    "operator": Object {
                      "__debugKind": "AddToken",
                      "end": 65,
                      "fullPos": 63,
                      "kind": 9,
                      "leadingIndent": 8,
                      "pos": 64,
                    },
                    "pos": 57,
                    "right": Object {
                      "__debugKind": "BinaryShorthand",
                      "end": 76,
                      "kind": 57,
                      "left": Object {
                        "__debugKind": "VariableReferenceExpression",
                        "end": 69,
                        "id": Object {
                          "__debugKind": "Identifier",
                          "end": 67,
                          "fullPos": 65,
                          "id": "x",
                          "kind": 21,
                          "leadingIndent": 8,
                          "pos": 66,
                        },
                        "kind": 36,
                        "pos": 66,
                      },
                      "operator": Object {
                        "__debugKind": "AddToken",
                        "end": 69,
                        "fullPos": 67,
                        "kind": 9,
                        "leadingIndent": 8,
                        "pos": 68,
                      },
                      "pos": 66,
                      "right": Object {
                        "__debugKind": "BinaryShorthand",
                        "end": 76,
                        "kind": 57,
                        "left": Object {
                          "__debugKind": "VariableReferenceExpression",
                          "end": 73,
                          "id": Object {
                            "__debugKind": "Identifier",
                            "end": 71,
                            "fullPos": 69,
                            "id": "y",
                            "kind": 21,
                            "leadingIndent": 8,
                            "pos": 70,
                          },
                          "kind": 36,
                          "pos": 70,
                        },
                        "operator": Object {
                          "__debugKind": "AddToken",
                          "end": 73,
                          "fullPos": 71,
                          "kind": 9,
                          "leadingIndent": 8,
                          "pos": 72,
                        },
                        "pos": 70,
                        "right": Object {
                          "__debugKind": "VariableReferenceExpression",
                          "end": 76,
                          "id": Object {
                            "__debugKind": "Identifier",
                            "end": 75,
                            "fullPos": 73,
                            "id": "z",
                            "kind": 21,
                            "leadingIndent": 8,
                            "pos": 74,
                          },
                          "kind": 36,
                          "pos": 74,
                        },
                      },
                    },
                  },
                  "kind": 53,
                  "pos": 57,
                },
              ],
            },
            "end": 76,
            "kind": 50,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 38,
              "fullPos": 36,
              "id": "f",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 37,
            },
            "params": Array [
              Object {
                "__debugKind": "Identifier",
                "end": 40,
                "fullPos": 39,
                "id": "x",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 39,
              },
              Object {
                "__debugKind": "Identifier",
                "end": 43,
                "fullPos": 41,
                "id": "y",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 42,
              },
              Object {
                "__debugKind": "Identifier",
                "end": 46,
                "fullPos": 44,
                "id": "z",
                "kind": 21,
                "leadingIndent": 4,
                "pos": 45,
              },
            ],
            "pos": 30,
          },
        ],
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with arrays 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 14,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 14,
      "expression": Object {
        "__debugKind": "ArraysExpression",
        "defaultValue": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 14,
          "kind": 35,
          "pos": 12,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 13,
            "fullPos": 11,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 12,
            "value": "0",
          },
        },
        "end": 14,
        "kind": 38,
        "length": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 11,
          "kind": 35,
          "pos": 8,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 10,
            "fullPos": 8,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 8,
            "value": "10",
          },
        },
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with binary shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 64,
  "kind": 34,
  "pos": 1,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 8,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 8,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 4,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 2,
            "fullPos": 0,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 1,
          },
          "kind": 36,
          "pos": 1,
        },
        "operator": Object {
          "__debugKind": "AddToken",
          "end": 4,
          "fullPos": 2,
          "kind": 9,
          "leadingIndent": 0,
          "pos": 3,
        },
        "pos": 1,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 8,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 6,
            "fullPos": 4,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 5,
          },
          "kind": 36,
          "pos": 5,
        },
      },
      "kind": 56,
      "pos": 1,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 14,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 14,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 10,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 6,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "operator": Object {
          "__debugKind": "SubToken",
          "end": 10,
          "fullPos": 8,
          "kind": 10,
          "leadingIndent": 0,
          "pos": 9,
        },
        "pos": 7,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 14,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 12,
            "fullPos": 10,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 11,
          },
          "kind": 36,
          "pos": 11,
        },
      },
      "kind": 56,
      "pos": 7,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 20,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 20,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 16,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 14,
            "fullPos": 12,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 13,
          },
          "kind": 36,
          "pos": 13,
        },
        "operator": Object {
          "__debugKind": "MulToken",
          "end": 16,
          "fullPos": 14,
          "kind": 11,
          "leadingIndent": 0,
          "pos": 15,
        },
        "pos": 13,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 20,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 18,
            "fullPos": 16,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 17,
          },
          "kind": 36,
          "pos": 17,
        },
      },
      "kind": 56,
      "pos": 13,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 26,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 26,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 22,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 20,
            "fullPos": 18,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 19,
          },
          "kind": 36,
          "pos": 19,
        },
        "operator": Object {
          "__debugKind": "DivToken",
          "end": 22,
          "fullPos": 20,
          "kind": 12,
          "leadingIndent": 0,
          "pos": 21,
        },
        "pos": 19,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 26,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 24,
            "fullPos": 22,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 23,
          },
          "kind": 36,
          "pos": 23,
        },
      },
      "kind": 56,
      "pos": 19,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 32,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 32,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 28,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 26,
            "fullPos": 24,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 25,
          },
          "kind": 36,
          "pos": 25,
        },
        "operator": Object {
          "__debugKind": "ModToken",
          "end": 28,
          "fullPos": 26,
          "kind": 13,
          "leadingIndent": 0,
          "pos": 27,
        },
        "pos": 25,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 32,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 30,
            "fullPos": 28,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 29,
          },
          "kind": 36,
          "pos": 29,
        },
      },
      "kind": 56,
      "pos": 25,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 38,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 38,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 34,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 32,
            "fullPos": 30,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 31,
          },
          "kind": 36,
          "pos": 31,
        },
        "operator": Object {
          "__debugKind": "LessThanToken",
          "end": 34,
          "fullPos": 32,
          "kind": 14,
          "leadingIndent": 0,
          "pos": 33,
        },
        "pos": 31,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 38,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 36,
            "fullPos": 34,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 35,
          },
          "kind": 36,
          "pos": 35,
        },
      },
      "kind": 56,
      "pos": 31,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 44,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 44,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 40,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 38,
            "fullPos": 36,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 37,
          },
          "kind": 36,
          "pos": 37,
        },
        "operator": Object {
          "__debugKind": "GreaterThanToken",
          "end": 40,
          "fullPos": 38,
          "kind": 15,
          "leadingIndent": 0,
          "pos": 39,
        },
        "pos": 37,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 44,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 42,
            "fullPos": 40,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 41,
          },
          "kind": 36,
          "pos": 41,
        },
      },
      "kind": 56,
      "pos": 37,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 51,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 51,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 47,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 44,
            "fullPos": 42,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 43,
          },
          "kind": 36,
          "pos": 43,
        },
        "operator": Object {
          "__debugKind": "LessEqualsThanToken",
          "end": 47,
          "fullPos": 44,
          "kind": 16,
          "leadingIndent": 0,
          "pos": 45,
        },
        "pos": 43,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 51,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 49,
            "fullPos": 47,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 48,
          },
          "kind": 36,
          "pos": 48,
        },
      },
      "kind": 56,
      "pos": 43,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 58,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 58,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 54,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 51,
            "fullPos": 49,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 50,
          },
          "kind": 36,
          "pos": 50,
        },
        "operator": Object {
          "__debugKind": "GreaterEqualsThanToken",
          "end": 54,
          "fullPos": 51,
          "kind": 17,
          "leadingIndent": 0,
          "pos": 52,
        },
        "pos": 50,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 58,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 56,
            "fullPos": 54,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 55,
          },
          "kind": 36,
          "pos": 55,
        },
      },
      "kind": 56,
      "pos": 50,
    },
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 64,
      "expression": Object {
        "__debugKind": "BinaryShorthand",
        "end": 64,
        "kind": 57,
        "left": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 61,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 58,
            "fullPos": 56,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 57,
          },
          "kind": 36,
          "pos": 57,
        },
        "operator": Object {
          "__debugKind": "EqualsEqualsToken",
          "end": 61,
          "fullPos": 58,
          "kind": 18,
          "leadingIndent": 0,
          "pos": 59,
        },
        "pos": 57,
        "right": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 64,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 63,
            "fullPos": 61,
            "id": "y",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 62,
          },
          "kind": 36,
          "pos": 62,
        },
      },
      "kind": 56,
      "pos": 57,
    },
  ],
}
`;

exports[`Parser Should work with function 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 28,
  "kind": 34,
  "pos": 1,
  "statements": Array [
    Object {
      "__debugKind": "FunctionStatement",
      "body": Object {
        "__debugKind": "SequenceOfStatements",
        "end": 28,
        "kind": 52,
        "pos": 23,
        "statements": Array [
          Object {
            "__debugKind": "LocalExpressionStatement",
            "end": 28,
            "expression": Object {
              "__debugKind": "NullExpression",
              "end": 28,
              "kind": 39,
              "pos": 23,
              "token": Object {
                "__debugKind": "NullKeyword",
                "end": 27,
                "fullPos": 18,
                "kind": 24,
                "leadingIndent": 4,
                "pos": 23,
              },
            },
            "kind": 53,
            "pos": 23,
          },
        ],
      },
      "end": 28,
      "kind": 55,
      "name": Object {
        "__debugKind": "Identifier",
        "end": 7,
        "fullPos": 5,
        "id": "f",
        "kind": 21,
        "leadingIndent": 0,
        "pos": 6,
      },
      "params": Array [
        Object {
          "__debugKind": "Identifier",
          "end": 9,
          "fullPos": 8,
          "id": "x",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 8,
        },
        Object {
          "__debugKind": "Identifier",
          "end": 12,
          "fullPos": 10,
          "id": "y",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 11,
        },
        Object {
          "__debugKind": "Identifier",
          "end": 15,
          "fullPos": 13,
          "id": "z",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 14,
        },
      ],
      "pos": 1,
    },
  ],
}
`;

exports[`Parser Should work with function call 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 5,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 5,
      "expression": Object {
        "__debugKind": "FunctionCallExpression",
        "args": Array [
          Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 5,
            "kind": 35,
            "pos": 2,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 4,
              "fullPos": 2,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 2,
              "value": "10",
            },
          },
        ],
        "end": 5,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "f",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 44,
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with get shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 4,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 4,
      "expression": Object {
        "__debugKind": "GetShorthand",
        "argExpression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 4,
          "kind": 35,
          "pos": 2,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 3,
            "fullPos": 2,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 2,
            "value": "1",
          },
        },
        "end": 4,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "a",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 58,
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with if expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 44,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 44,
      "expression": Object {
        "__debugKind": "IfExpression",
        "condition": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 5,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 4,
            "fullPos": 2,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 3,
          },
          "kind": 36,
          "pos": 3,
        },
        "elseStatement": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 44,
          "kind": 52,
          "pos": 32,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 44,
              "expression": Object {
                "__debugKind": "PrintingExpression",
                "args": Array [],
                "end": 44,
                "format": Object {
                  "__debugKind": "StringLiteralToken",
                  "end": 42,
                  "fullPos": 39,
                  "kind": 20,
                  "leadingIndent": 4,
                  "pos": 39,
                  "value": "B",
                },
                "kind": 37,
                "pos": 32,
              },
              "kind": 53,
              "pos": 32,
            },
          ],
        },
        "end": 44,
        "kind": 46,
        "pos": 0,
        "thenStatement": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 26,
          "kind": 52,
          "pos": 10,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 26,
              "expression": Object {
                "__debugKind": "PrintingExpression",
                "args": Array [],
                "end": 26,
                "format": Object {
                  "__debugKind": "StringLiteralToken",
                  "end": 20,
                  "fullPos": 17,
                  "kind": 20,
                  "leadingIndent": 4,
                  "pos": 17,
                  "value": "A",
                },
                "kind": 37,
                "pos": 10,
              },
              "kind": 53,
              "pos": 10,
            },
          ],
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with if expression with only if 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 22,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 22,
      "expression": Object {
        "__debugKind": "IfExpression",
        "condition": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 5,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 4,
            "fullPos": 2,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 3,
          },
          "kind": 36,
          "pos": 3,
        },
        "elseStatement": undefined,
        "end": 22,
        "kind": 46,
        "pos": 0,
        "thenStatement": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 22,
          "kind": 52,
          "pos": 10,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 22,
              "expression": Object {
                "__debugKind": "PrintingExpression",
                "args": Array [],
                "end": 22,
                "format": Object {
                  "__debugKind": "StringLiteralToken",
                  "end": 20,
                  "fullPos": 17,
                  "kind": 20,
                  "leadingIndent": 4,
                  "pos": 17,
                  "value": "A",
                },
                "kind": 37,
                "pos": 10,
              },
              "kind": 53,
              "pos": 10,
            },
          ],
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with integer 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 1,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 1,
      "expression": Object {
        "__debugKind": "IntegerLiteralExpression",
        "end": 1,
        "kind": 35,
        "pos": 0,
        "value": Object {
          "__debugKind": "IntegerLiteralToken",
          "end": 1,
          "fullPos": 0,
          "kind": 19,
          "leadingIndent": 0,
          "pos": 0,
          "value": "1",
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with method call 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 7,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 7,
      "expression": Object {
        "__debugKind": "MethodCallExpression",
        "args": Array [
          Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 7,
            "kind": 35,
            "pos": 4,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 6,
              "fullPos": 4,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 4,
              "value": "10",
            },
          },
        ],
        "end": 7,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "o",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 41,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 3,
          "fullPos": 2,
          "id": "f",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 2,
        },
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with method slot 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 57,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 57,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 57,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 36,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 36,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "leadingIndent": 4,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 49,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 19,
            },
            "pos": 15,
          },
          Object {
            "__debugKind": "MethodSlot",
            "body": Object {
              "__debugKind": "SequenceOfStatements",
              "end": 57,
              "kind": 52,
              "pos": 50,
              "statements": Array [
                Object {
                  "__debugKind": "LocalExpressionStatement",
                  "end": 57,
                  "expression": Object {
                    "__debugKind": "SlotLookupExpression",
                    "end": 57,
                    "expression": Object {
                      "__debugKind": "ThisExpression",
                      "end": 55,
                      "kind": 48,
                      "pos": 50,
                    },
                    "kind": 42,
                    "name": Object {
                      "__debugKind": "Identifier",
                      "end": 56,
                      "fullPos": 55,
                      "id": "x",
                      "kind": 21,
                      "leadingIndent": 8,
                      "pos": 55,
                    },
                    "pos": 50,
                  },
                  "kind": 53,
                  "pos": 50,
                },
              ],
            },
            "end": 57,
            "kind": 50,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 38,
              "fullPos": 36,
              "id": "f",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 37,
            },
            "params": Array [],
            "pos": 30,
          },
        ],
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with null 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 4,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 4,
      "expression": Object {
        "__debugKind": "NullExpression",
        "end": 4,
        "kind": 39,
        "pos": 0,
        "token": Object {
          "__debugKind": "NullKeyword",
          "end": 4,
          "fullPos": 0,
          "kind": 24,
          "leadingIndent": 0,
          "pos": 0,
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 26,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 26,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 26,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 26,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 26,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "leadingIndent": 4,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 49,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 19,
            },
            "pos": 15,
          },
        ],
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object with slots 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 26,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 26,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 26,
        "extendsClause": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 9,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 8,
            "fullPos": 7,
            "id": "p",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 7,
          },
          "kind": 36,
          "pos": 7,
        },
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 26,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 26,
              "kind": 35,
              "pos": 23,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 25,
                "fullPos": 22,
                "kind": 19,
                "leadingIndent": 4,
                "pos": 23,
                "value": "10",
              },
            },
            "kind": 49,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 20,
              "fullPos": 18,
              "id": "x",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 19,
            },
            "pos": 15,
          },
        ],
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with object without extends 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 23,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 23,
      "expression": Object {
        "__debugKind": "ObjectsExpression",
        "end": 23,
        "extendsClause": undefined,
        "kind": 40,
        "pos": 0,
        "slots": Array [
          Object {
            "__debugKind": "VariableSlot",
            "end": 23,
            "initializer": Object {
              "__debugKind": "IntegerLiteralExpression",
              "end": 23,
              "kind": 35,
              "pos": 20,
              "value": Object {
                "__debugKind": "IntegerLiteralToken",
                "end": 22,
                "fullPos": 19,
                "kind": 19,
                "leadingIndent": 4,
                "pos": 20,
                "value": "10",
              },
            },
            "kind": 49,
            "name": Object {
              "__debugKind": "Identifier",
              "end": 17,
              "fullPos": 15,
              "id": "x",
              "kind": 21,
              "leadingIndent": 4,
              "pos": 16,
            },
            "pos": 12,
          },
        ],
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with printing 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 31,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 31,
      "expression": Object {
        "__debugKind": "PrintingExpression",
        "args": Array [
          Object {
            "__debugKind": "IntegerLiteralExpression",
            "end": 31,
            "kind": 35,
            "pos": 29,
            "value": Object {
              "__debugKind": "IntegerLiteralToken",
              "end": 30,
              "fullPos": 28,
              "kind": 19,
              "leadingIndent": 0,
              "pos": 29,
              "value": "8",
            },
          },
        ],
        "end": 31,
        "format": Object {
          "__debugKind": "StringLiteralToken",
          "end": 26,
          "fullPos": 8,
          "kind": 20,
          "leadingIndent": 0,
          "pos": 8,
          "value": " My age is ~. n ",
        },
        "kind": 37,
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with set shorthand 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 8,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 8,
      "expression": Object {
        "__debugKind": "SetShorthand",
        "argExpression": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 4,
          "kind": 35,
          "pos": 2,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 3,
            "fullPos": 2,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 2,
            "value": "1",
          },
        },
        "end": 8,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "a",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 59,
        "pos": 0,
        "value": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 8,
          "kind": 35,
          "pos": 7,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 8,
            "fullPos": 6,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 7,
            "value": "0",
          },
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with slot assignment 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 12,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 12,
      "expression": Object {
        "__debugKind": "SlotAssignmentExpression",
        "end": 12,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "o",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 43,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 7,
          "fullPos": 2,
          "id": "field",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 2,
        },
        "pos": 0,
        "value": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 12,
          "kind": 35,
          "pos": 10,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 12,
            "fullPos": 9,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 10,
            "value": "42",
          },
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with slot lookup 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 7,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 7,
      "expression": Object {
        "__debugKind": "SlotLookupExpression",
        "end": 7,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 2,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "o",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 42,
        "name": Object {
          "__debugKind": "Identifier",
          "end": 7,
          "fullPos": 2,
          "id": "field",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 2,
        },
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with statement sequences 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 14,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "SequenceOfStatements",
      "end": 14,
      "kind": 52,
      "pos": 0,
      "statements": Array [
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 5,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 5,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 4,
              "fullPos": 1,
              "id": "s1",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 2,
            },
            "kind": 36,
            "pos": 2,
          },
          "kind": 53,
          "pos": 2,
        },
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 9,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 9,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 8,
              "fullPos": 5,
              "id": "s2",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 6,
            },
            "kind": 36,
            "pos": 6,
          },
          "kind": 53,
          "pos": 6,
        },
        Object {
          "__debugKind": "LocalExpressionStatement",
          "end": 14,
          "expression": Object {
            "__debugKind": "VariableReferenceExpression",
            "end": 14,
            "id": Object {
              "__debugKind": "Identifier",
              "end": 12,
              "fullPos": 9,
              "id": "s3",
              "kind": 21,
              "leadingIndent": 0,
              "pos": 10,
            },
            "kind": 36,
            "pos": 10,
          },
          "kind": 53,
          "pos": 10,
        },
      ],
    },
  ],
}
`;

exports[`Parser Should work with variable assignment 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 6,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 6,
      "expression": Object {
        "__debugKind": "VariableAssignmentExpression",
        "end": 6,
        "expression": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 3,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 1,
            "fullPos": 0,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 0,
          },
          "kind": 36,
          "pos": 0,
        },
        "kind": 45,
        "pos": 0,
        "value": Object {
          "__debugKind": "IntegerLiteralExpression",
          "end": 6,
          "kind": 35,
          "pos": 4,
          "value": Object {
            "__debugKind": "IntegerLiteralToken",
            "end": 6,
            "fullPos": 3,
            "kind": 19,
            "leadingIndent": 0,
            "pos": 4,
            "value": "42",
          },
        },
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with variable reference 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 1,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 1,
      "expression": Object {
        "__debugKind": "VariableReferenceExpression",
        "end": 1,
        "id": Object {
          "__debugKind": "Identifier",
          "end": 1,
          "fullPos": 0,
          "id": "x",
          "kind": 21,
          "leadingIndent": 0,
          "pos": 0,
        },
        "kind": 36,
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;

exports[`Parser Should work with while expression 1`] = `
Object {
  "__debugKind": "SourceFile",
  "end": 23,
  "kind": 34,
  "pos": 0,
  "statements": Array [
    Object {
      "__debugKind": "TopLevelExpressionStatement",
      "end": 23,
      "expression": Object {
        "__debugKind": "WhileExpression",
        "body": Object {
          "__debugKind": "SequenceOfStatements",
          "end": 23,
          "kind": 52,
          "pos": 13,
          "statements": Array [
            Object {
              "__debugKind": "LocalExpressionStatement",
              "end": 23,
              "expression": Object {
                "__debugKind": "VariableAssignmentExpression",
                "end": 23,
                "expression": Object {
                  "__debugKind": "VariableReferenceExpression",
                  "end": 16,
                  "id": Object {
                    "__debugKind": "Identifier",
                    "end": 14,
                    "fullPos": 8,
                    "id": "x",
                    "kind": 21,
                    "leadingIndent": 4,
                    "pos": 13,
                  },
                  "kind": 36,
                  "pos": 13,
                },
                "kind": 45,
                "pos": 13,
                "value": Object {
                  "__debugKind": "BinaryShorthand",
                  "end": 23,
                  "kind": 57,
                  "left": Object {
                    "__debugKind": "VariableReferenceExpression",
                    "end": 20,
                    "id": Object {
                      "__debugKind": "Identifier",
                      "end": 18,
                      "fullPos": 16,
                      "id": "x",
                      "kind": 21,
                      "leadingIndent": 4,
                      "pos": 17,
                    },
                    "kind": 36,
                    "pos": 17,
                  },
                  "operator": Object {
                    "__debugKind": "AddToken",
                    "end": 20,
                    "fullPos": 18,
                    "kind": 9,
                    "leadingIndent": 4,
                    "pos": 19,
                  },
                  "pos": 17,
                  "right": Object {
                    "__debugKind": "VariableReferenceExpression",
                    "end": 23,
                    "id": Object {
                      "__debugKind": "Identifier",
                      "end": 22,
                      "fullPos": 20,
                      "id": "y",
                      "kind": 21,
                      "leadingIndent": 4,
                      "pos": 21,
                    },
                    "kind": 36,
                    "pos": 21,
                  },
                },
              },
              "kind": 53,
              "pos": 13,
            },
          ],
        },
        "condition": Object {
          "__debugKind": "VariableReferenceExpression",
          "end": 8,
          "id": Object {
            "__debugKind": "Identifier",
            "end": 7,
            "fullPos": 5,
            "id": "x",
            "kind": 21,
            "leadingIndent": 0,
            "pos": 6,
          },
          "kind": 36,
          "pos": 6,
        },
        "end": 23,
        "kind": 47,
        "pos": 0,
      },
      "kind": 56,
      "pos": 0,
    },
  ],
}
`;
